--- a/Katatous/Katatous.vcxproj.filters
+++ b/Katatous/Katatous.vcxproj.filters
@@ -216,5 +216,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="..\3DPGPropertySheet.props" />
+    <None Include="..\PhysXPropertySheet.props" />
   </ItemGroup>
 </Project>
