--- a/Katatous/Katatous.vcxproj
+++ b/Katatous/Katatous.vcxproj
@@ -181,6 +181,7 @@
     <ClInclude Include="Framework\GameContext.h" />
     <ClInclude Include="Framework\GameObject.h" />
     <ClInclude Include="Framework\ISceneBuilder.h" />
+    <ClInclude Include="Framework\PhysXManager.h" />
     <ClInclude Include="Framework\Scene.h" />
     <ClInclude Include="Framework\SceneManager.h" />
     <ClInclude Include="Framework\StepTimer.h" />
@@ -214,6 +215,7 @@
     <ClCompile Include="Framework\DebugTools\GridFloorWrapper.cpp" />
     <ClCompile Include="Framework\Game.cpp" />
     <ClCompile Include="Framework\GameCamera.cpp" />
+    <ClCompile Include="Framework\PhysXManager.cpp" />
     <ClCompile Include="Framework\Scene.cpp" />
     <ClCompile Include="Framework\SceneManager.cpp" />
     <ClCompile Include="Framework\Transform.cpp" />
