--- a/Katatous/Katatous.vcxproj
+++ b/Katatous/Katatous.vcxproj
@@ -181,7 +181,9 @@
     <ClInclude Include="Framework\GameContext.h" />
     <ClInclude Include="Framework\GameObject.h" />
     <ClInclude Include="Framework\ISceneBuilder.h" />
+    <ClInclude Include="Framework\PhysXCommons.h" />
     <ClInclude Include="Framework\PhysXManager.h" />
+    <ClInclude Include="Framework\PhysXScene.h" />
     <ClInclude Include="Framework\Scene.h" />
     <ClInclude Include="Framework\SceneManager.h" />
     <ClInclude Include="Framework\StepTimer.h" />
@@ -216,6 +218,7 @@
     <ClCompile Include="Framework\Game.cpp" />
     <ClCompile Include="Framework\GameCamera.cpp" />
     <ClCompile Include="Framework\PhysXManager.cpp" />
+    <ClCompile Include="Framework\PhysXScene.cpp" />
     <ClCompile Include="Framework\Scene.cpp" />
     <ClCompile Include="Framework\SceneManager.cpp" />
     <ClCompile Include="Framework\Transform.cpp" />
