--- a/Katatous/Katatous.vcxproj
+++ b/Katatous/Katatous.vcxproj
@@ -181,11 +181,13 @@
     <ClInclude Include="Framework\GameContext.h" />
     <ClInclude Include="Framework\GameObject.h" />
     <ClInclude Include="Framework\ISceneBuilder.h" />
+    <ClInclude Include="Framework\Object.h" />
     <ClInclude Include="Framework\PhysXCommons.h" />
     <ClInclude Include="Framework\PhysXManager.h" />
     <ClInclude Include="Framework\PhysXScene.h" />
     <ClInclude Include="Framework\Scene.h" />
     <ClInclude Include="Framework\SceneManager.h" />
+    <ClInclude Include="Framework\SerializedField.h" />
     <ClInclude Include="Framework\StepTimer.h" />
     <ClInclude Include="Framework\Transform.h" />
     <ClInclude Include="Game\BaseScene.h" />
@@ -221,6 +223,7 @@
     <ClCompile Include="Framework\PhysXScene.cpp" />
     <ClCompile Include="Framework\Scene.cpp" />
     <ClCompile Include="Framework\SceneManager.cpp" />
+    <ClCompile Include="Framework\SerializedField.cpp" />
     <ClCompile Include="Framework\Transform.cpp" />
     <ClCompile Include="Game\BaseScene.cpp" />
     <ClCompile Include="Game\BuildSettings.cpp" />
